Enemy drain works
red lightning doesn't

--- a/BatteryCollector/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BatteryCollector/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,14 +170,14 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,InputSettings.Bindings.ActionMappings.Collect,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,InputSettings.Bindings.ActionMappings.Collect,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,InputSettings.Bindings.ActionMappings.Collect,
-ThirdPersonCharacter_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.PostProcess.Rendering Features
+ThirdPersonCharacter_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.PostProcess.Rendering Features|Ambient OcclusionAdvanced,ThirdPersonCharacter_C.PostProcess.Rendering Features|Ambient Occlusion,
 K2Node_VariableGet=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 K2Node_VariableSet=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 BatteryBP_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,
 Character=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Constant,
 BatteryHUD_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,
-ObjectProperty=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,
+ObjectProperty=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 Menu_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,
 EnemyNonCopy_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 EnemyPrototype_C=EnemyPrototype_C.Collision.Collision,
@@ -186,9 +186,10 @@ EnemyAIController_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonC
 NegBatteryBP_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 BoolProperty=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
+SceneComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,ThirdPersonCharacter_C.PostProcess.Rendering Features,EnemyNonCopy_C.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Bluprints
+ContentBrowserTab1.SelectedPaths=/Game/Bluprints/Pickups
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -891,7 +892,9 @@ PhysicsAssetEditor.TimeStamp=2019.08.28-09.51.12
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/EnemyNonCopy.EnemyNonCopy
+OpenAssetsAtExit=/Game/Bluprints/Pickups/NegBatteryBP.NegBatteryBP
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -1919,6 +1922,12 @@ REINST_EnemyNonCopy_C_361.Pawn=True
 REINST_EnemyNonCopy_C_361.Replication=True
 REINST_EnemyNonCopy_C_361.Input=True
 REINST_EnemyNonCopy_C_361.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -1934,15 +1943,16 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 [DetailCategoriesAdvanced]
 StaticMeshActor.Physics=True
 SpawnVolume.Shape=False
+ParticleSystemComponent.Particles=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Bluprints/BatteryCollectorGameMode_BP
-MRUItem1=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Bluprints/Pickups/NegBatteryBP
-MRUItem3=/Game/ThirdPersonCPP/Blueprints/EnemyBt
-MRUItem4=/Game/ThirdPersonCPP/Blueprints/EnemyBlackboard
-MRUItem5=/Game/ThirdPersonCPP/Blueprints/EnemyAIController
-MRUItem6=/Game/ThirdPersonCPP/Blueprints/EnemyNonCopy
+MRUItem0=/Game/Bluprints/Pickups/NegBatteryBP
+MRUItem1=/Game/ThirdPersonCPP/Blueprints/EnemyNonCopy
+MRUItem2=/Game/Bluprints/BatteryCollectorGameMode_BP
+MRUItem3=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/ThirdPersonCPP/Blueprints/EnemyBt
+MRUItem5=/Game/ThirdPersonCPP/Blueprints/EnemyBlackboard
+MRUItem6=/Game/ThirdPersonCPP/Blueprints/EnemyAIController
 MRUItem7=/Game/ThirdPersonCPP/Blueprints/EnemyPrototype
 MRUItem8=/Game/Bluprints/Widgets/Menu
 MRUItem9=/Game/Bluprints/Widgets/BatteryHUD
